--- a/theme.css
+++ b/theme.css
@@ -22,3 +22,10 @@ body {
   font-family: Arial;
   margin: 30px 0;
 }
+#content-box {
+  flex: 4;
+  position: absolute;
+}
+#sidebar {
+  flex: 1;
+}
