--- a/theme.css
+++ b/theme.css
@@ -2,6 +2,13 @@ body {
   padding:  0;
   margin: 0;
 }
+#page {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
 .vcontainer {
   display: flex;
   flex-flow: column;
