--- a/theme.css
+++ b/theme.css
@@ -35,8 +35,8 @@ body {
   position: absolute;
 }
 #content-box img {
-  width: 100px;
-  height: 100px;
+  max-width: 100%;
+  max-height: 100%;
 }
 #sidebar {
   flex: 1;
