--- a/theme.css
+++ b/theme.css
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css?family=Roboto';
+
 body {
   padding:  0;
   margin: 0;
@@ -30,7 +32,7 @@ body {
 #header h1 {
   font-size: 72pt;
   color:  #fff;
-  font-family: Arial;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 30px 0;
 }
@@ -45,4 +47,10 @@ body {
   flex: 1;
   background: #ddd;
   padding: 100px;
+}
+
+#sidebar h2 {
+  margin: 0px;
+  color: #330066;
+  font-family: 'Roboto', sans-serif;
 }
