--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans|Roboto';
 
 body {
   padding:  0;
