--- a/theme.css
+++ b/theme.css
@@ -62,6 +62,7 @@ body {
 }
 
 span.showtime {
+  display: inline-block;
   min-width: 50px;
   color: #330066;
   font-family: 'Roboto', sans-serif;
