--- a/theme.css
+++ b/theme.css
@@ -39,11 +39,22 @@ body {
 #content-box {
   flex: 4;
 }
+.table {
+  display: table;
+}
+.table-center {
+  display: table-cell;
+  vertical-align: middle;
+}
 #content-box img {
   max-width: 100%;
   max-height: 100%;
   margin: auto;
 }
+
+
+
+
 #sidebar {
   flex: 1;
   background: #eee;
