--- a/theme.css
+++ b/theme.css
@@ -52,9 +52,10 @@ body {
   max-height: 100%;
   margin: auto;
 }
-
-
-
+#slideshow {
+  max-width: 100%;
+  max-height: 100%;
+}
 
 #sidebar {
   flex: 1;
