--- a/theme.css
+++ b/theme.css
@@ -25,6 +25,7 @@ body {
 #header {
   background:  #330066;
   min-height: 300px;
+  max-height: 600px;
   width: 100%;
   padding: 50px 0;
   text-align: center;
