--- a/theme.css
+++ b/theme.css
@@ -20,8 +20,12 @@ body {
 .hcontainer {
   display: flex;
   flex-flow: row;
-  position: relative;
-  height: 100%;
+  /*position: relative;*/
+  /*height: 100%;*/
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 #header {
   background:  #330066;
