--- a/theme.css
+++ b/theme.css
@@ -20,12 +20,7 @@ body {
 .hcontainer {
   display: flex;
   flex-flow: row;
-  /*position: relative;*/
-  /*height: 100%;*/
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  position: relative;
 }
 #header {
   background:  #330066;
@@ -75,6 +70,10 @@ body {
   /*flex: 1;*/
   background: #eee;
   padding: 20px 30px;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
 }
 
 #sidebar h2 {
