--- a/theme.css
+++ b/theme.css
@@ -16,11 +16,13 @@ body {
   display: flex;
   flex-flow: column;
   position: relative;
+  height: 100%;
 }
 .hcontainer {
   display: flex;
   flex-flow: row;
   position: relative;
+  height: 100%;
 }
 #header {
   background:  #330066;
@@ -67,7 +69,6 @@ body {
 }
 
 #sidebar {
-  /*flex: 1;*/
   background: #eee;
   padding: 20px 30px;
   position: absolute;
